# osx-shifter

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
src/: config.rs  main.rs
src/audio/: engine.rs  mod.rs  ring_buffer.rs
src/playback/: controller.rs  state.rs
src/tui/: app.rs  ui.rs
