[package]
name = "shifter"
version = "0.1.0"
edition = "2024"

[dependencies]
coreaudio-rs = { version = "0.14", features = ["audio_unit", "core_audio"] }
coreaudio-sys = { version = "0.2", default-features = false, features = ["audio_unit", "core_audio"] }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
