[package]
name = "shifter"
version = "0.1.0"
edition = "2024"
description = "macOS TUI tool for syncing a live audio source with a video stream -- adds a precise, adjustable delay"
license = "MIT"
repository = "https://github.com/xesco/osx-shifter"
keywords = ["audio", "macos", "tui", "time-shift", "dvr"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
coreaudio-rs = { version = "0.14", features = ["audio_unit", "core_audio"] }
coreaudio-sys = { version = "0.2", default-features = false, features = ["audio_unit", "core_audio"] }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
